# HDB_SDE_Technical_Test_26

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: SOLUTION_DESIGN.md  aws_data_exploitation_architecture.dot  aws_data_ingestion_architecture.dot  hdb_aws_data_ingestion_architecture-v2.dot
notebooks/: hdb_resale_pipeline.ipynb
output/: run_manifest.json
output/failed/: resale_flat_prices_failed.csv
output/profiling/: column_profile.csv  flat_model_distribution.csv  flat_type_distribution.csv  storey_range_distribution.csv  town_distribution.csv
output/review/: potential_price_anomalies.csv
src/hdb_pipeline/: cli.py  config.py  data_quality.py  ingestion.py  main.py  output.py  pipeline.py  transformation.py
tests/: test_pipeline.py
