[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hdb-resale-pipeline"
version = "1.0.0"
description = "HDB resale flat price ETL technical test"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0,<3.0"]

[project.scripts]
hdb-resale-pipeline = "hdb_pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
